--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -5,9 +5,8 @@
     padding: 2rem;
     color: #fff;
     @media screen and (min-width: 768px) {
-margin-top: -100px;
-padding: 4.75rem;
-
+        margin-top: -100px;
+        padding: 4.75rem;
     }
     .testimonial__title {
         color: var(--Primary, #3c98ed);
@@ -20,7 +19,9 @@ padding: 4.75rem;
         letter-spacing: var(--4, 0.25rem);
         text-transform: uppercase;
     }
-
+    .metric__title {
+        font-size: 2.92406rem;
+    }
     .metric__card {
         display: flex;
         flex-direction: column;
@@ -33,7 +34,7 @@ padding: 4.75rem;
         background: rgba(19, 19, 39, 0.28);
         padding: var(--32, 2rem);
         width: 243px;
-        .metric__title {
+        .metric__card__title {
             color: var(--Neutral-100_FFFFFF, #fff);
             font-style: normal;
             font-weight: 700;
