--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -19,6 +19,14 @@
         letter-spacing: var(--4, 0.25rem);
         text-transform: uppercase;
     }
+
+    .testimonial__img {
+        margin: 0 auto;
+        border-width: 8px;
+        border-color: rgba(255, 255, 255, 0.2);
+        border-radius: 6rem;
+        width: 96px;
+    }
     .metric__title {
         font-size: 2.92406rem;
     }
