--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -13,8 +13,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: var(--Scale-XS, 0.875rem);
-        line-height: var(--Line-Height-Headline-H4, 1.6875rem); /* 192.857% */
-        /* Headlines/H4 */
+        line-height: var(--Line-Height-Headline-H4, 1.6875rem);
         font-family: var(--Font-Family-Headline, "Plus Jakarta Sans");
         letter-spacing: var(--4, 0.25rem);
         text-transform: uppercase;
@@ -22,10 +21,13 @@
 
     .testimonial__img {
         margin: 0 auto;
-        border-width: 8px;
+
+        img {
+border-width: 8px;
         border-color: rgba(255, 255, 255, 0.2);
         border-radius: 6rem;
         width: 96px;
+        }
     }
     .metric__title {
         font-size: 2.92406rem;
@@ -46,7 +48,7 @@
             color: var(--Neutral-100_FFFFFF, #fff);
             font-style: normal;
             font-weight: 700;
-            line-height: 2rem; /* 100% */
+            line-height: 2rem;
             letter-spacing: 0.175rem;
         }
     }
