--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -23,8 +23,7 @@
         margin: 0 auto;
 
         img {
-            border-width: 8px;
-            border-color: rgba(255, 255, 255, 0.2);
+            border: 8px solid rgba(255, 255, 255, 0.2);
             border-radius: 6rem;
             width: 96px !important;
             margin: 0 auto;
