--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -81,9 +81,15 @@ li.menu-item-gtranslate {
 }
 .header__area {
     background-color: $color-black;
+    .container {
+        @media (max-width: 768px) {
+            width: 100%;
+            max-width: 100%;
+        }
+    }
     .navbar-brand {
         margin-right: 0.5rem;
-        height: 2.5rem;
+        width: 11.25rem;
         img {
             width: 100%;
             height: 100%;
