--- a/blocks/StatsSlider/style.css
+++ b/blocks/StatsSlider/style.css
@@ -1,5 +1,20 @@
 .statsSlider {
+    &:before {
+        content: '';
+        display: block;
+        width: 50%;
+height: 50%;
+        position: absolute;
+        top: -100px;
+        right: -22%;
+        z-index: -1;
+        background-image: url(./img/heptagone.svg);
+        background-repeat: no-repeat;
+        background-position: 100% 0;
+        background-size: contain;
+    }
     margin-bottom: 2rem;
+    overflow: visible;
     @media screen and (min-width: 768px) {
             margin-bottom: 5rem;
     }
