--- a/blocks/Faq/style.css
+++ b/blocks/Faq/style.css
@@ -6,7 +6,7 @@
     transform: translateY(-27px);
     @media screen and (min-width: 768px) {
         transform: translateY(-100px);
-    padding: 3rem 6rem;
+        padding: 3rem 6rem 5rem;
     }
 
     .panel-faq {
