--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -434,22 +434,12 @@ hr.custom {
 }
 
 .page__header__title {
-    margin-left: auto;
-    -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    border-radius: 100px 16px 16px 100px;
-    background: #ffffff;
-    padding: 10px 30px;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    color: $color-secondary;
+    margin-bottom: 2rem;
+    color: $color-primary;
     text-transform: uppercase;
     @include responsive-font-size(40, 48, 800);
     @media only screen and (max-width: 767px) {
         @include responsive-font-size(30, 40);
-        margin: 0 auto;
-        border-radius: 100px;
         text-align: center;
     }
 }
@@ -457,9 +447,6 @@ hr.custom {
 .page__header__area {
     &--noBg {
         .page__header__title {
-            margin: auto;
-            border-radius: 100px;
-            width: fit-content;
             text-align: center;
         }
     }
