--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -76,7 +76,7 @@
 .btn__orange.white:hover { background: #fff; color: #171C60; }
 
 /** @author      ThatMuch @version     0.1.0 @since       heptalytics_1.0.0.0 */
-h1, h2, h3, h4, h5, h6 { font-family: "Rubik", sans-serif; }
+h1, h2, h3, h4, h5, h6 {  }
 
 h1, .h1 { font-size: 3rem; line-height: 1.25; font-weight: bold; }
 
@@ -121,7 +121,7 @@ h6, .h6 { font-size: 1rem; line-height: 1.5; }
 
 .product__content__title { margin-top: 0; }
 
-.product__content__price { font-size: 2rem; font-weight: 700; font-family: "Rubik", sans-serif; color: #FF8833; }
+.product__content__price { font-size: 2rem; font-weight: 700;  color: #FF8833; }
 
 .product__content__featured { width: 100%; height: 400px; border-radius: 7px; overflow: hidden; margin-bottom: 1.5rem; }
 
@@ -441,9 +441,9 @@ hr.custom { border-color: #1956A8; opacity: 1; margin: 50px auto; max-width: 85%
 
 .page__text { font-family: "PlusJakartaSans", sans-serif; }
 
-/* .page__text h1, .page__text h2, .page__text h3, .page__text h4, .page__text h5, .page__text h6 { font-family: "Rubik", sans-serif; text-transform: uppercase; font-weight: 700; margin-bottom: 30px; }
+/* .page__text h1, .page__text h2, .page__text h3, .page__text h4, .page__text h5, .page__text h6 {  text-transform: uppercase; font-weight: 700; margin-bottom: 30px; }
 
-.page__text h2 { color: #152235; text-transform: uppercase; font-size: 2.5rem; line-height: 1.2; font-weight: 800; margin-bottom: 40px; font-family: "Rubik", sans-serif; } */
+.page__text h2 { color: #152235; text-transform: uppercase; font-size: 2.5rem; line-height: 1.2; font-weight: 800; margin-bottom: 40px;  } */
 
 @media (max-width: 768px) { .page__text h2 { font-size: 2.375rem; line-height: 1.44; } }
 
