--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -70,7 +70,7 @@ li.menu-item-gtranslate {
         color: $color-light;
     }
     .header__description {
-        white-space: pre-wrap;
+        white-space: pre-line;
     }
     svg {
         position: absolute;
