--- a/assets/styles/organisms/_footer.scss
+++ b/assets/styles/organisms/_footer.scss
@@ -37,7 +37,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px 16px 0px 0px;
     background-color: $color-black;
-    padding: 3rem 4rem 0;
+    padding: 3rem 4rem;
     color: $color-light;
     text-align: center;
     @include breakpoint(laptop) {
