--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -29,6 +29,11 @@
         }
     }
 
+    .content__title {
+        font-size: 1.125rem;
+        font-weight: 600;
+    }
+
     .metrics__list {
         display: flex;
         flex-wrap: wrap;
