--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -7,7 +7,6 @@
  */
 .right-menu {
     display: flex;
-
     align-items: center;
     gap: 1rem;
     @include breakpoint(laptop) {
@@ -99,8 +98,7 @@ li.menu-item-gtranslate {
         }
 
         img {
-            width: 100%;
-            height: 100%;
+            max-height: 100%;
             object-fit: contain;
         }
     }
