--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -64,6 +64,7 @@
             font-weight: 700;
             line-height: 2rem;
             letter-spacing: 0.175rem;
+            font-size: 1.25rem;
         }
     }
 }
