--- a/blocks/Layering/style.css
+++ b/blocks/Layering/style.css
@@ -22,7 +22,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             padding: 4.75rem;
-            width: 100%;
+            /* width: 100%; */
             height: 100%;
             color: #fff;
             @media (max-width: 768px) {
