--- a/blocks/Testimonials/style.css
+++ b/blocks/Testimonials/style.css
@@ -28,6 +28,7 @@
     }
 
     .content__title {
+        color: white;
         font-size: 1.125rem;
         font-weight: 600;
     }
@@ -38,6 +39,7 @@
         gap: 1.5rem;
     }
     .metric__title {
+        color: white;
         font-size: 1.5rem;
         text-align: center;
         @media screen and (min-width: 768px) {
