--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -125,36 +125,19 @@ li.menu-item-gtranslate {
     .dropdown-menu {
         display: none;
         position: relative;
-        -webkit-transform: none;
-        transform: none;
-        margin: 0;
-        border: 0;
+        top: 3rem;
+        left: 1.875rem;
         border-radius: 7px;
         background: $color-light;
         padding: 1rem;
-        min-width: auto;
         &.show {
-            display: block;
-        }
-        &::before {
-            display: none;
-            @include breakpoint(laptop) {
-                position: absolute;
-                top: -12px;
-                left: 50%;
-                transform: translate(-50%, 0);
-                border-right: 9px solid transparent;
-                border-bottom: 13px solid $color-light;
-                border-left: 9px solid transparent;
-                width: 13px;
-                height: 9px;
-                content: "";
-            }
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
         }
     }
 
     .dropdown-item {
-        margin-bottom: 1rem;
         padding: 0;
         color: $color-primary;
         font-family: $text-ff;
@@ -166,10 +149,9 @@ li.menu-item-gtranslate {
     }
 
     .dropdown-toggle {
-        &:hover::after {
-            background-image: url(../images/arrow-down-orange.svg);
-        }
+        position: relative;
         &::after {
+            position: absolute;
             vertical-align: 2px;
             -webkit-transition: 0.2s;
             transition: 0.2s;
@@ -180,15 +162,10 @@ li.menu-item-gtranslate {
             height: 6px;
         }
         &.show {
-            -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-            box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
             border-radius: 7px;
-            background: $color-light;
-            color: var(--orange);
             &::after {
                 -webkit-transform: rotate(180deg);
                 transform: rotate(180deg);
-                background-image: url(../images/arrow-down-orange.svg);
             }
         }
     }
