--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -117,20 +117,22 @@
         &:hover,
         &.active {
             cursor: pointer;
-            background-color: $color-primary-darker;
         }
     }
 
     .dropdown-toggle {
         position: relative;
         &::after {
+            display: inline-block;
             position: absolute;
             vertical-align: 2px;
             -webkit-transition: 0.2s;
             transition: 0.2s;
             margin-left: 10px;
             border: 0;
-            background: url(../images/arrow-down.svg) no-repeat scroll 0 0 / 100%;
+            border: solid white;
+            border-width: 0 1px 1px 0;
+            padding: 3px;
             width: 10px;
             height: 6px;
         }
