--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -120,12 +120,14 @@
         }
     }
 
-    .dropdown {
+    .dropdown-toggle {
         position: relative;
         &::after {
             display: block;
             position: absolute;
             vertical-align: 2px;
+            transform: rotate(45deg);
+            -webkit-transform: rotate(45deg);
             -webkit-transition: 0.2s;
             transition: 0.2s;
             margin-left: 10px;
@@ -133,8 +135,6 @@
             border: solid white;
             border-width: 0 1px 1px 0;
             padding: 3px;
-            width: 10px;
-            height: 6px;
             content: "";
         }
     }
